// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTextColor is rendered 1`] = `
<span
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiTextColor-default-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiTextColor props cloneElement is rendered 1`] = `
<p
  class="emotion-euiTextColor-default"
>
  Content
</p>
`;

exports[`EuiTextColor props color is rendered with custom color 1`] = `
<span
  class="emotion-euiTextColor-customColor"
  style="color: rgb(255, 0, 0);"
>
  <p>
    Content
  </p>
</span>
`;

exports[`EuiTextColor props color is rendered with named color 1`] = `
<span
  class="emotion-euiTextColor-warning"
>
  <p>
    Content
  </p>
</span>
`;
